fix dropdown menu spacing

--- a/caravel/static/style.css
+++ b/caravel/static/style.css
@@ -134,10 +134,6 @@ div.col-slider {
   color: white;
   }
 
-.navbar-nav li a {
- line-height: 60px;
-}
-
 .left_footer {
   width: 30%;
   text-align: left;
